uv_layers.remove() always raises error #104789

Closed
opened 2023-02-15 18:59:10 +01:00 by Demeter Dzadik · 1 comment
Member

System Information
Operating system: Linux-6.1.11-gentoo-x86_64-Intel-R-_Core-TM-i9-9900K_CPU@_3.60GHz-with-glibc2.36 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.89.02

Blender Version
Broken: version: 3.5.0 Alpha, branch: HEAD (modified), commit date: 2023-02-15 11:13, hash: 4387dbf03e67

Short description of error
The uv_layers.remove() function will raise a RuntimeError after successfully executing.

Exact steps for others to reproduce the error

  • Default Cube
  • PyConsole: C.object.data.uv_layers.remove(C.object.data.uv_layers[0])
  • UVMap is removed as requested, but an error is raised anyways.
**System Information** Operating system: Linux-6.1.11-gentoo-x86_64-Intel-R-_Core-TM-_i9-9900K_CPU_@_3.60GHz-with-glibc2.36 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.89.02 **Blender Version** Broken: version: 3.5.0 Alpha, branch: HEAD (modified), commit date: 2023-02-15 11:13, hash: `4387dbf03e67` **Short description of error** The uv_layers.remove() function will raise a RuntimeError after successfully executing. **Exact steps for others to reproduce the error** - Default Cube - PyConsole: C.object.data.uv_layers.remove(C.object.data.uv_layers[0]) - UVMap is removed as requested, but an error is raised anyways.
Demeter Dzadik added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-02-15 18:59:11 +01:00
Hans Goudey added
Status
Confirmed
Type
Bug
and removed
Status
Needs Triage
Type
Report
labels 2023-02-15 19:18:21 +01:00
Hans Goudey added this to the 3.5 milestone 2023-02-15 19:18:27 +01:00
Hans Goudey added this to the Modeling project 2023-02-15 19:18:32 +01:00
Hans Goudey self-assigned this 2023-02-15 19:18:39 +01:00
Member

Can confirm. A simple typo from 6c774feba2. Fix incoming.

Can confirm. A simple typo from 6c774feba2c9a1eb5834646f597a0f2c63177914. Fix incoming.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-15 19:28:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104789
No description provided.