Fix #104789: uv_layers.remove() always raises error

A simple typo from 6c774feba2c9a1eb583. Also return
so nothing happens when the UV map isn't found.